[package]
name = "dists"
version = "0.3.1"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "2d distribution generator"
license = "MIT/Apache-2.0"
repository = "https://github.com/tiby312/dists"
keywords = ["distribution"]
readme = "readme.md"
edition = "2018"


[dependencies]
rand = "0.7.0"
axgeom = "1.2"

[dev-dependencies]
