[package]
name = "dists"
version = "0.4.2"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "2d distribution generator"
license = "MIT/Apache-2.0"
repository = "https://github.com/tiby312/dists"
keywords = ["distribution"]
readme = "readme.md"
edition = "2021"


[dependencies]
rand = "0.7.0"
axgeom = {version="1.9",default-features=false}

[dev-dependencies]
